# resume-formatter

./: .gitignore  LICENSE  README.md  build_resume  example_build.sh  package-lock.json  package.json  pandoc_build  pandoc_build.sh  resume-formatter.cabal
in/: neallred.css  neallred.md  neallred.scss
src/: Main.hs  ResumeStyles.hs
